--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -70,6 +70,7 @@
                   name="first"
                   minlength="2"
                 /><br>
+                <span class="firstnameErrorMessage hidden">Veuillez entrer deux caractères ou plus dans le champ du prénom.</span>
               </div>
               <div
                 class="formData">
@@ -80,6 +81,7 @@
                   id="last"
                   name="last"
                 /><br>
+                <span class="lastnameErrorMessage hidden">Veuillez entrer deux caractères ou plus dans le champ du nom.</span>
               </div>
               <div
                 class="formData">
@@ -90,6 +92,7 @@
                   id="email"
                   name="email"
                 /><br>
+                <span class="emailErrorMessage hidden">Veuillez entrer une adresse mail valide dans ce champ.</span>
               </div>
               <div
                 class="formData">
@@ -100,15 +103,17 @@
                   id="birthdate"
                   name="birthdate"
                 /><br>
+                <span class="birthdateErrorMessage hidden">Vous devez renseigner votre date de naissance.</span>
               </div>
               <div
                 class="formData">
                 <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+                <span class="quantityErrorMessage hidden">Veuillez renseigner un nombre de tournoi.</span>
               </div>
               <p class="text-label">Quelles villes ?</p>
               <div
-                class="formData">
+                class="formData" id="citychoices">
                 <input
                   class="checkbox-input"
                   type="radio"
@@ -175,15 +180,17 @@
                   <span class="checkbox-icon"></span>
                   Portland</label
                 >
+                <span class="citiesErrorMessage hidden">Veuillez cocher une des villes proposées.</span>
               </div>
 
               <div
-                class="formData">
+                class="formData"
+                id="terms-conditions"
+                >
                 <input
                   class="checkbox-input"
                   type="checkbox"
-                  id="checkbox1"
-                  checked
+                  id="terms-checkbox"
                 />
                 <label class="checkbox2-label" for="checkbox1" required>
                   <span class="checkbox-icon"></span>
@@ -196,6 +203,7 @@
                   Je Je souhaite être prévenu des prochains évènements.
                 </label>
                 <br>
+                <span class="termsErrorMessage hidden">Vous devez accepter les termes et conditions d'utilisation.</span>
               </div>
               <input
                 class="btn-submit"
@@ -207,6 +215,24 @@
           </div>
         </div>
       </div>
+
+      <div class="bground-thx">
+        <div class="content-thx">
+
+          <span class="close" id="close-thx"></span>
+
+          <div class="thx-body">
+            <p class="text-thx">Merci !<br/> Votre réservation a bien été enregistrée.<br/> À très bientôt !</p>
+          </div>
+
+          <input 
+          type="submit" 
+          class="button button-thx" 
+          value="Fermer" 
+          />
+
+        </div>
+      </div>
     </main>
     <footer>
       <p class="copyrights">
@@ -214,5 +240,7 @@
       </p>
     </footer>
     <script src="./scripts/modal.js"></script>
+    <script src="./scripts/testform.js"></script>
+    <script src="./scripts/notif.js"></script>
   </body>
 </html>
