--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -11,20 +11,19 @@
 
   </head>
   <body>
-    <div class="topnav" id="myTopnav">
+    <div class="topnav responsive" id="myTopnav">
       <div class="header-logo">
-      <img alt="logo" src="Logo.png" width="auto" height="auto" />
-    </div>
-    <div class="main-navbar">
-      
-      <a href="#" class="active"><span>Détails de l'évènement</span></a>
-      <a href="#"><span>À propos</span></a>
-      <a href="#"><span>Contact</span></a>
-      <a href="#"><span>Évènements passés</span></a>
-      <a href="javascript:void(0);" class="icon" onclick="editNav()">
-        <i class="fa fa-bars"></i>
-      </a>
-    </div>
+        <img alt="logo" src="Logo.png" width="auto" height="auto" />
+      </div>
+      <div class="main-navbar">
+        <a href="#" class="active"><span>Détails de l'évènement</span></a>
+        <a href="#"><span>À propos</span></a>
+        <a href="#"><span>Contact</span></a>
+        <a href="#"><span>Évènements passés</span></a>
+        <a href="javascript:void(0);" class="icon" onclick="editNav()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
     </div>
   </div>
     <main>
@@ -58,7 +57,7 @@
               name="reserve"
               action="index.html"
               method="get"
-              onsubmit="return validate();"
+              class="registration-form"
             >
               <div
                 class="formData">
@@ -187,17 +186,13 @@
                 class="formData"
                 id="terms-conditions"
                 >
-                <input
-                  class="checkbox-input"
-                  type="checkbox"
-                  id="terms-checkbox"
-                />
-                <label class="checkbox2-label" for="checkbox1" required>
+                <input class="checkbox-input" type="checkbox" id="checkbox1"/>
+                <label class="checkbox2-label" for="checkbox1">
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
                 <br>
-                <input class="checkbox-input" type="checkbox" id="checkbox2" />
+                <input class="checkbox-input" type="checkbox" id="checkbox2"/>
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
                   Je Je souhaite être prévenu des prochains évènements.
@@ -206,9 +201,8 @@
                 <span class="termsErrorMessage hidden">Vous devez accepter les termes et conditions d'utilisation.</span>
               </div>
               <input
-                class="btn-submit"
+                class="btn-submit button"
                 type="submit"
-                class="button"
                 value="C'est parti"
               />
             </form>
@@ -219,15 +213,15 @@
       <div class="bground-thx">
         <div class="content-thx">
 
-          <span class="close" id="close-thx"></span>
+          <span class="close" id="closeThx"></span>
 
-          <div class="thx-body">
+          <div class="body-thx">
             <p class="text-thx">Merci !<br/> Votre réservation a bien été enregistrée.<br/> À très bientôt !</p>
           </div>
 
           <input 
           type="submit" 
-          class="button button-thx" 
+          class="btn-submit buttonThx" 
           value="Fermer" 
           />
 
