test radio et typerror solution

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -16,7 +16,8 @@
         <img alt="logo" src="Logo.png" width="auto" height="auto" />
       </div>
       <div class="main-navbar">
-        <a href="#" class="active"><span>Détails de l'évènement</span></a>
+        <a href="#" class="active"><span>Accueil</span></a>
+        <a href="#"><span>Détails de l'évènement</span></a>
         <a href="#"><span>À propos</span></a>
         <a href="#"><span>Contact</span></a>
         <a href="#"><span>Évènements passés</span></a>
@@ -79,6 +80,7 @@
                   type="text"
                   id="last"
                   name="last"
+                  minlength="2"
                 /><br>
                 <span class="lastnameErrorMessage hidden">Veuillez entrer deux caractères ou plus dans le champ du nom.</span>
               </div>
@@ -116,8 +118,8 @@
                 <input
                   class="checkbox-input"
                   type="radio"
-                  id="location1"
                   name="location"
+                  id="location1"
                   value="New York"
                 />
                 <label class="checkbox-label" for="location1">
@@ -127,8 +129,8 @@
                 <input
                   class="checkbox-input"
                   type="radio"
-                  id="location2"
                   name="location"
+                  id="location2"
                   value="San Francisco"
                 />
                 <label class="checkbox-label" for="location2">
@@ -138,8 +140,8 @@
                 <input
                   class="checkbox-input"
                   type="radio"
-                  id="location3"
                   name="location"
+                  id="location3"
                   value="Seattle"
                 />
                 <label class="checkbox-label" for="location3">
@@ -149,8 +151,8 @@
                 <input
                   class="checkbox-input"
                   type="radio"
-                  id="location4"
                   name="location"
+                  id="location4"
                   value="Chicago"
                 />
                 <label class="checkbox-label" for="location4">
@@ -160,8 +162,8 @@
                 <input
                   class="checkbox-input"
                   type="radio"
-                  id="location5"
                   name="location"
+                  id="location5"
                   value="Boston"
                 />
                 <label class="checkbox-label" for="location5">
@@ -171,8 +173,8 @@
                 <input
                   class="checkbox-input"
                   type="radio"
-                  id="location6"
                   name="location"
+                  id="location6"
                   value="Portland"
                 />
                 <label class="checkbox-label" for="location6">
