update js form test

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -70,7 +70,7 @@
                   name="first"
                   minlength="2"
                 /><br>
-                <span class="firstnameErrorMessage hidden">Veuillez entrer deux caractères ou plus dans le champ du prénom.</span>
+                <span class="firstnameErrorMessage hidden hidden-text">Veuillez entrer deux caractères ou plus dans le champ du prénom.</span>
               </div>
               <div
                 class="formData">
@@ -82,7 +82,7 @@
                   name="last"
                   minlength="2"
                 /><br>
-                <span class="lastnameErrorMessage hidden">Veuillez entrer deux caractères ou plus dans le champ du nom.</span>
+                <span class="lastnameErrorMessage hidden hidden-text">Veuillez entrer deux caractères ou plus dans le champ du nom.</span>
               </div>
               <div
                 class="formData">
@@ -93,7 +93,7 @@
                   id="email"
                   name="email"
                 /><br>
-                <span class="emailErrorMessage hidden">Veuillez entrer une adresse mail valide dans ce champ.</span>
+                <span class="emailErrorMessage hidden hidden-text">Veuillez entrer une adresse mail valide dans ce champ.</span>
               </div>
               <div
                 class="formData">
@@ -104,13 +104,13 @@
                   id="birthdate"
                   name="birthdate"
                 /><br>
-                <span class="birthdateErrorMessage hidden">Vous devez renseigner votre date de naissance.</span>
+                <span class="birthdateErrorMessage hidden hidden-text">Vous devez renseigner votre date de naissance.</span>
               </div>
               <div
                 class="formData">
                 <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
-                <span class="quantityErrorMessage hidden">Veuillez renseigner un nombre de tournoi.</span>
+                <span class="quantityErrorMessage hidden hidden-text">Veuillez renseigner un nombre de tournoi.</span>
               </div>
               <p class="text-label">Quelles villes ?</p>
               <div
@@ -181,7 +181,7 @@
                   <span class="checkbox-icon"></span>
                   Portland</label
                 >
-                <span class="citiesErrorMessage hidden">Veuillez cocher une des villes proposées.</span>
+                <span class="citiesErrorMessage hidden hidden-text">Veuillez cocher une des villes proposées.</span>
               </div>
 
               <div
@@ -200,7 +200,7 @@
                   Je Je souhaite être prévenu des prochains évènements.
                 </label>
                 <br>
-                <span class="termsErrorMessage hidden">Vous devez accepter les termes et conditions d'utilisation.</span>
+                <span class="termsErrorMessage hidden hidden-text">Vous devez accepter les termes et conditions d'utilisation.</span>
               </div>
               <input
                 class="btn-submit button"
