changes css / JS update and ok / HTML ok

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -107,17 +107,17 @@
                 <span class="birthdateErrorMessage hidden hidden-text">Vous devez renseigner votre date de naissance.</span>
               </div>
               <div
-                class="formData">
+                class="formData tournament-number">
                 <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
-                <span class="quantityErrorMessage hidden hidden-text">Veuillez renseigner un nombre de tournoi.</span>
+                <span class="quantityErrorMessage hidden hidden-text">Veuillez saisir un nombre (zéro compris).</span>
               </div>
               <p class="text-label">Quelles villes ?</p>
               <div
                 class="formData" id="citychoices">
                 <input
                   class="checkbox-input"
-                  type="radio"
+                  type="checkbox"
                   name="location"
                   id="location1"
                   value="New York"
@@ -128,7 +128,7 @@
                 >
                 <input
                   class="checkbox-input"
-                  type="radio"
+                  type="checkbox"
                   name="location"
                   id="location2"
                   value="San Francisco"
@@ -139,7 +139,7 @@
                 >
                 <input
                   class="checkbox-input"
-                  type="radio"
+                  type="checkbox"
                   name="location"
                   id="location3"
                   value="Seattle"
@@ -150,7 +150,7 @@
                 >
                 <input
                   class="checkbox-input"
-                  type="radio"
+                  type="checkbox"
                   name="location"
                   id="location4"
                   value="Chicago"
@@ -161,7 +161,7 @@
                 >
                 <input
                   class="checkbox-input"
-                  type="radio"
+                  type="checkbox"
                   name="location"
                   id="location5"
                   value="Boston"
@@ -172,7 +172,7 @@
                 >
                 <input
                   class="checkbox-input"
-                  type="radio"
+                  type="checkbox"
                   name="location"
                   id="location6"
                   value="Portland"
@@ -181,7 +181,7 @@
                   <span class="checkbox-icon"></span>
                   Portland</label
                 >
-                <span class="citiesErrorMessage hidden hidden-text">Veuillez cocher une des villes proposées.</span>
+                <div class="citiesErrorMessage hidden hidden-text">Veuillez cocher une des villes proposées.</div>
               </div>
 
               <div
