final settings ok

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -70,7 +70,7 @@
                   name="first"
                   minlength="2"
                 /><br>
-                <span class="firstnameErrorMessage hidden hidden-text">Veuillez entrer deux caractères ou plus dans le champ du prénom.</span>
+                <span class="firstnameErrorMessage hidden hidden-text">Veuillez entrer deux caractères ou plus dans le champ "Prénom".</span>
               </div>
               <div
                 class="formData">
@@ -82,7 +82,7 @@
                   name="last"
                   minlength="2"
                 /><br>
-                <span class="lastnameErrorMessage hidden hidden-text">Veuillez entrer deux caractères ou plus dans le champ du nom.</span>
+                <span class="lastnameErrorMessage hidden hidden-text">Veuillez entrer deux caractères ou plus dans le champ "Nom".</span>
               </div>
               <div
                 class="formData">
@@ -93,7 +93,7 @@
                   id="email"
                   name="email"
                 /><br>
-                <span class="emailErrorMessage hidden hidden-text">Veuillez entrer une adresse mail valide dans ce champ.</span>
+                <span class="emailErrorMessage hidden hidden-text">Veuillez entrer une adresse mail valide dans le champ "E-mail".</span>
               </div>
               <div
                 class="formData">
@@ -104,7 +104,7 @@
                   id="birthdate"
                   name="birthdate"
                 /><br>
-                <span class="birthdateErrorMessage hidden hidden-text">Vous devez renseigner votre date de naissance.</span>
+                <span class="birthdateErrorMessage hidden hidden-text">Veuillez renseigner votre date de naissance.</span>
               </div>
               <div
                 class="formData tournament-number">
