final settins ok

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
   </head>
   <body>
-    <div class="topnav responsive" id="myTopnav">
+    <div class="topnav" id="myTopnav">
       <div class="header-logo">
-        <img alt="logo" src="Logo.png" width="auto" height="auto" />
+        <img alt="logo" src="./ressources/Logo.png" width="auto" height="auto" />
       </div>
       <div class="main-navbar">
         <a href="#" class="active"><span>Accueil</span></a>
@@ -21,7 +21,7 @@
         <a href="#"><span>À propos</span></a>
         <a href="#"><span>Contact</span></a>
         <a href="#"><span>Évènements passés</span></a>
-        <a href="javascript:void(0);" class="icon" onclick="editNav()">
+        <a href="#" class="icon" id="icon">
           <i class="fa fa-bars"></i>
         </a>
       </div>
@@ -43,7 +43,7 @@
           </button>
         </div>
         <div class="hero-img">
-          <img src="./bg_img.jpg" alt="img" />
+          <img src="./ressources/bg_img.jpg" alt="img" />
         </div>
         <button class="btn-signup modal-btn">
           je m'inscris
