--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="topnav" id="myTopnav">
       <div class="header-logo">
-        <img alt="logo" src="./ressources/Logo.png" width="auto" height="auto" />
+        <img alt="logo" src="./ressources/Logo.png"/>
       </div>
       <div class="main-navbar">
         <a href="#" class="active"><span>Accueil</span></a>
@@ -26,7 +26,6 @@
         </a>
       </div>
     </div>
-  </div>
     <main>
       <div class="hero-section">
         <div class="hero-content">
