--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
                   type="text"
                   id="first"
                   name="first"
-                  minlength="2"
                 /><br>
-                <span class="firstnameErrorMessage hidden hidden-text">Veuillez entrer deux caractères ou plus dans le champ "Prénom".</span>
+                <span class="firstnameErrorMessage hidden hidden-text">Veuillez entrer deux caractères ou plus et uniquement des lettres dans le champ "Prénom".</span>
               </div>
               <div
                 class="formData">
@@ -79,9 +78,8 @@
                   type="text"
                   id="last"
                   name="last"
-                  minlength="2"
                 /><br>
-                <span class="lastnameErrorMessage hidden hidden-text">Veuillez entrer deux caractères ou plus dans le champ "Nom".</span>
+                <span class="lastnameErrorMessage hidden hidden-text">Veuillez entrer deux caractères ou plus  et uniquement des lettres dans le champ "Nom".</span>
               </div>
               <div
                 class="formData">
